--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,6 @@
 <div class="view">
     <webview src="https://gemini.google.com/app"></webview>
 </div>
+<div class="resize-handle"></div>
 </body>
 </html>
